--- a/landing.html
+++ b/landing.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="dmlogo.PNG">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -89,7 +90,7 @@
 											</header>
 											<p>In this project I used a combination of Javascript, HTML, and CSS. I set out to make tracking spells in Dungeons & Dragons easier and interactive. At the begining I had a lot to learn about the JS involved in making alot of my elements work together, but after a lot of time, work, and help from others, I finished my project. Check out the demo video to learn more about my project!</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://github.com/derikmccausland/spells-sheet" target="_blank" class="button">GitHub Repo</a></li>
 												<!-- <iframe width="420" height="315"
 												src="https://www.youtube.com/watch?v=BFPlyJghxjQ">
 												</iframe> -->
@@ -203,11 +204,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<!-- <li><a href="#" class="icon brands alt fa-twitter" arget="_blank"><span class="label">Twitter</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li> -->
+								<!-- <li><a href="#" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li> -->
+								<li><a href="https://github.com/derikmccausland" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/derik-m/"  target="_blank"  class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
