--- a/landing.html
+++ b/landing.html
@@ -53,7 +53,7 @@
 							</header>
 							<div class="content">
 								<p>This is where I will list all of my completed projects<br />
-								You will also find related demo video's</p>
+								You will also find related demo video's and GitHub repo's</p>
 							</div>
 						</div>
 					</section>
